--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "eslint": "^8.44.0",
+    "glob": "^11.0.1",
     "jest": "^29.6.1",
     "markdown-it": "^13.0.1",
     "prompt-sync": "^4.2.0"
@@ -20,4 +21,4 @@
     "@jest/globals": "^29.6.1",
     "babel-jest": "^29.6.1"
   }
-} 
+}
