Add detailed markdown report

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ CaFeb25-ExerciseSubmission
 src/student-results.json
 src/student-report.md
 src/student-report.csv
+**/*-detailed-report.md
+src/_detailed-report copy.md
+src/_detailed-report.md
