--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ src/student-report.csv
 **/*-detailed-report.md
 src/_detailed-report copy.md
 src/_detailed-report.md
+src/reports/_detailed-report copy.md
