Add html version of overview report

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ src/student-report.csv
 src/_detailed-report copy.md
 src/_detailed-report.md
 src/reports/_detailed-report copy.md
+src/student-report.html
