--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ src/_detailed-report.md
 src/reports/_detailed-report copy.md
 src/student-report.html
 src/ex-tester.code-workspace
+ex-tester.code-workspace
