Add server endpoint for ex uploads & testing

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ src/reports/_detailed-report copy.md
 src/student-report.html
 src/ex-tester.code-workspace
 ex-tester.code-workspace
+student-results.json
