--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "server": "node server.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "chalk": "^5.3.0",
     "eslint": "^8.44.0",
+    "express": "^4.21.2",
     "glob": "^11.0.1",
     "jest": "^29.6.1",
     "markdown-it": "^13.0.1",
+    "multer": "^1.4.5-lts.1",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
