--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "cors": "^2.8.5",
     "eslint": "^8.44.0",
     "express": "^4.21.2",
     "glob": "^11.0.1",
