--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "cors": "^2.8.5",
     "eslint": "^8.44.0",
     "express": "^4.21.2",
+    "fs-extra": "^11.3.0",
+    "fuzzy": "^0.1.3",
     "glob": "^11.0.1",
+    "inquirer": "^9.3.7",
+    "inquirer-autocomplete-prompt": "^3.0.1",
+    "inquirer-checkbox-plus": "^1.0.2",
+    "inquirer-search-list": "^1.2.6",
     "jest": "^29.6.1",
     "markdown-it": "^13.0.1",
     "multer": "^1.4.5-lts.1",
